Landscape orientation small screen fixed

--- a/style.css
+++ b/style.css
@@ -382,16 +382,6 @@ nav {
 
 /* About page Main Section */
 
-.fa-arrow-down {
-  color: rgb(128, 128, 128);
-  margin-top: 120%;
-  margin-left: 10%;
-  float: left;
-  position: fixed;
-  font-size: 5rem;
-  /* opacity: 0.4; */
-}
-
 .aboutMain {
   display: flex;
   flex-direction: column;
@@ -435,7 +425,7 @@ nav {
 }
 
 .aboutText {
-  width: 90%;
+  width: 80%;
   height: 60dvh;
   align-self: center;
   justify-content: center;
@@ -443,6 +433,7 @@ nav {
   display: flex;
   flex-direction: column;
   margin-top: 50px;
+  margin-left: 30px;
   z-index: -1;
 }
 
@@ -488,11 +479,11 @@ nav {
 
 .aboutPartThree {
   position: relative;
+  opacity: 0;
   -webkit-animation: aboutSlideInFromLeft linear forwards;
   animation: aboutSlideInFromLeft linear forwards;
   animation-timeline: view();
-  animation-range-start: cover;
-  animation-range-end: 400px;
+  animation-range: entry 15%;
 }
 
 .aboutPartThree::after {
@@ -506,17 +497,17 @@ nav {
     rgb(0, 0, 0)
   );
   position: absolute;
-  bottom: -20%;
+  bottom: -50px;
   left: 0;
 }
 
 .aboutPartFour {
   position: relative;
+  opacity: 0;
   -webkit-animation: aboutSlideInFromRight linear forwards;
   animation: aboutSlideInFromRight linear forwards;
   animation-timeline: View();
-  animation-range-start: cover;
-  animation-range-end: 400px;
+  animation-range: entry 15%;
 }
 
 .aboutPartFour::after {
@@ -530,17 +521,17 @@ nav {
     rgb(0, 0, 0)
   );
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   left: 0;
 }
 
 .aboutPartFive {
   position: relative;
+  opacity: 0;
   -webkit-animation: aboutSlideInFromLeft forwards;
   animation: aboutSlideInFromLeft forwards;
   animation-timeline: View();
-  animation-range-start: cover;
-  animation-range-end: 400px;
+  animation-range: entry 15%;
 }
 
 .aboutPartFive::after {
@@ -609,36 +600,44 @@ nav {
 @-webkit-keyframes aboutSlideInFromLeft {
   from {
     transform: translateX(-100%) scale(0);
+    opacity: 0;
   }
   to {
     transform: translateX(0) scale(1);
+    opacity: 1;
   }
 }
 
 @keyframes aboutSlideInFromLeft {
   from {
     transform: translateX(-100%) scale(0);
+    opacity: 0;
   }
   to {
     transform: translateX(0) scale(1);
+    opacity: 1;
   }
 }
 
 @-webkit-keyframes aboutSlideInFromRight {
   from {
     transform: translateX(100%) scale(0);
+    opacity: 0;
   }
   to {
     transform: translateX(0) scale(1);
+    opacity: 1;
   }
 }
 
 @keyframes aboutSlideInFromRight {
   from {
     transform: translateX(100%) scale(0);
+    opacity: 0;
   }
   to {
     transform: translateX(0) scale(1);
+    opacity: 1;
   }
 }
 
@@ -666,10 +665,12 @@ nav {
 
 .aboutText p {
   font-size: var(--pSize);
+  margin: 0;
 }
 
 .aboutText h2 {
   font-size: var(--h2Size);
+  margin-bottom: 10px;
 }
 
 /* Portfolio Page */
@@ -681,6 +682,7 @@ nav {
   display: flex;
   flex-direction: column;
   width: 90%;
+  overflow-x: hidden;
 }
 
 .portfolioHeader {
@@ -1430,6 +1432,7 @@ nav {
     }
   }
   /*About page breakpoints*/
+
   .aboutText {
     width: 50%;
   }
@@ -1454,5 +1457,18 @@ nav {
   }
   .formMessage {
     width: 40vw;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 985px) {
+  .aboutText {
+    height: 90dvh;
+    margin-left: 50px;
+  }
+  .aboutPartOne {
+    margin: 0;
+    padding: 0;
+  }
+  .aboutScroll {
   }
 }
